--- a/Sec_Slide/index.html
+++ b/Sec_Slide/index.html
@@ -11,7 +11,7 @@
         <div>Slope is...</div>
         <div>Slope represents...</div>
         <div>We use slope because...</div>
-        <div><a href="/index.html">Back</a></div>
+        <div><a href="~/index.html">Back</a></div>
         <div><a href="/Sec_Slide/Third_Slide/index.html">Next Slide</a></div>
         </body>
     </html>
